fix: adopt media system controls to android tv

--- a/configuration/script/media_system_power_off.yaml
+++ b/configuration/script/media_system_power_off.yaml
@@ -2,10 +2,16 @@
 living_room_media_system_power_off:
   alias: "Living Room Media System: Turn Off"
   sequence:
-    - service: script.turn_on
-      data: {}
-      entity_id: script.living_room_projector_power_off
+    - repeat:
+        count: 2
+        sequence:
+          - delay: 2
+          - service: remote.turn_off
+            data: {}
+            target:
+              entity_id: remote.living_room_projector
     - service: media_player.turn_off
       data: {}
-      entity_id: media_player.denon_avr_x1500h
+      target:
+        entity_id: media_player.denon_avr_x1500h
   mode: single
