feat: use postgresql recorder

--- a/configuration/configuration.yaml
+++ b/configuration/configuration.yaml
@@ -29,10 +29,13 @@ http:
 api:
 
 recorder:
-  purge_keep_days: 15
+  purge_keep_days: 33
   commit_interval: 15
   auto_purge: true
   auto_repack: true
+  db_url: !env_var POSTGRESQL_URI
+  db_max_retries: 15
+  db_retry_wait: 3
 
 influxdb: !include influxdb/configuration.yaml
 
