feat: prepare configuration for different internal and external urls

--- a/.ci/secrets.yaml
+++ b/.ci/secrets.yaml
@@ -2,5 +2,6 @@
 homeassistant_latitude: 00.00000000000000
 homeassistant_longitude: 00.00000000000000
 homeassistant_elevation: 0
-homeassistant_url: https://homeassistant.domain.com
+homeassistant_external_url: https://homeassistant.domain.com
+homeassistant_internal_url: https://homeassistant.domain.com
 influxdb_token: influxdb
