--- a/configuration/configuration.yaml
+++ b/configuration/configuration.yaml
@@ -9,12 +9,12 @@ homeassistant:
   unit_system: metric
   temperature_unit: C
   currency: EUR
-  external_url: !secret homeassistant_url
-  internal_url: !secret homeassistant_url
+  external_url: !secret homeassistant_external_url
+  internal_url: !secret homeassistant_internal_url
   packages: !include_dir_named packages
   customize_domain:
     automation:
-      initial_state: 'on'
+      initial_state: "on"
   auth_providers:
     - type: homeassistant
 
